--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Llama in Pajamas Travels</title>
-    <meta name="author" content="name">
-    <meta name="description" content="description here">
+    <meta name="author" content="Michał Chudzik, Rafał Plinzner">
+    <meta name="description" content="Business card for travel agency - project for digital marketing classes">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <link href="assets/reset.css" rel="stylesheet" type="text/css">
