--- a/index.html
+++ b/index.html
@@ -12,19 +12,53 @@
     <meta name="description" content="Business card for travel agency - project for digital marketing classes">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link href="assets/variables.css" rel="stylesheet" type="text/css">
     <link href="assets/reset.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="assets/main.css" rel="stylesheet" type="text/css">
+    <link href="assets/footer.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header>
       Header is working!
     </header>
 
-    <footer>
-      Footer is working!
+    <!-- FOOTER-->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <!-- COMPANY -->
+          <section class="col-md-2">
+            <h6>Firma</h6>
+            <ul class="footer-company-info">
+              <li><a href="#">O nas</a></li>
+              <li><a href="#">Kontakt</a></li>
+            </ul>
+          </section>
+          <!-- TERMS & CONDITIONS-->
+          <section class="col-md-2">
+            <h6>Zasady</h6>
+            <ul class="footer-terms-and-conditions">
+              <li><a href="#">Regulamin</a></li>
+            </ul>
+          </section>
+          <!-- SOCIAL MEDIA -->
+          <section class="col-md-6">
+            <h6>Dołącz do nas</h6>
+            <span class="footer-social-media-icon">
+              <i class="fab fa-facebook-square"></i>
+            </span>
+            <span class="footer-social-media-icon">
+              <i class="fab fa-instagram"></i>
+            </span>
+            <span class="footer-social-media-icon">
+              <i class="fab fa-twitter-square"></i>
+            </span>
+          </section>
+        </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
