[Add] Copyright section

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta name="description" content="Business card for travel agency - project for digital marketing classes">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link href="assets/variables.css" rel="stylesheet" type="text/css">
-    <link href="assets/reset.css" rel="stylesheet" type="text/css">
+    <link href="assets/styles/variables.css" rel="stylesheet" type="text/css">
+    <link href="assets/styles/reset.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link href="assets/main.css" rel="stylesheet" type="text/css">
-    <link href="assets/footer.css" rel="stylesheet" type="text/css">
+    <link href="assets/styles/main.css" rel="stylesheet" type="text/css">
+    <link href="assets/styles/footer.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header>
@@ -56,6 +56,12 @@
             <span class="footer-social-media-icon">
               <i class="fab fa-twitter-square"></i>
             </span>
+          </section>
+        </div>
+        <div class="row">
+          <!-- COPYRIGHT -->
+          <section class="col-md-12">
+            <small class="footer-copyright">Copyright &copy; Llamas in Pajamas</small>
           </section>
         </div>
       </div>
