[Add] header sceleton

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="assets/styles/variables.css" rel="stylesheet" type="text/css" />
     <link href="assets/styles/reset.css" rel="stylesheet" type="text/css" />
+    <link href="assets/styles/header.css" rel="stylesheet" type="text/css" />
     <link
       href="assets/styles/our-places-section.css"
       rel="stylesheet"
@@ -43,9 +44,8 @@
   </head>
   <body>
     <header>
-      Header is working!
-      <nav>
-        <ul>
+      <nav class="row">
+        <ul class="main-nav">
           <li><a href="#">Nasze ośrodki</a></li>
           <li><a href="#">O nas</a></li>
           <li><a href="#">Kontakt</a></li>
