[Add] Colors to socials on hover + some css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header>
       <nav class="row">
         <ul class="main-nav">
-          <li><a href="#">Nasze ośrodki</a></li>
+          <li><a href="#places-section">Nasze ośrodki</a></li>
           <li><a href="#">O nas</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
@@ -55,11 +55,11 @@
     <!--
   OUR PLACES SECTION
 -->
-    <section>
-      <div class="places-carousel">
+    <section id="places-section">
+      <div class="places-carousel ">
         <div
           id="carouselExampleCaptions"
-          class="carousel slide row"
+          class="carousel slide"
           data-ride="carousel"
         >
           <ol class="carousel-indicators">
@@ -132,6 +132,8 @@
         </div>
       </div>
     </section>
+
+    <!-- SECTION "ABOUT US" -->
 
     <!-- FOOTER-->
     <footer class="footer">
