[Add] about us section, our places extension

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <nav class="row">
         <ul class="main-nav">
           <li><a href="#places-section">Nasze ośrodki</a></li>
-          <li><a href="#">O nas</a></li>
+          <li><a href="#about-us">O nas</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
@@ -56,6 +56,19 @@
   OUR PLACES SECTION
 -->
     <section id="places-section">
+      <div class="row justify-content-center">
+        <h2>Nasze ośrodki</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum,
+          praesentium eos. Cum illo dolore similique adipisci ipsam, provident
+          asperiores optio sunt odit voluptatum suscipit beatae! Et minima
+          doloribus tenetur? Aliquid?Magni quibusdam porro quisquam at, maiores
+          odio labore corporis eos reprehenderit molestias nobis beatae deserunt
+          consectetur! Iusto facilis odit impedit quam soluta, eius dolores
+          architecto quibusdam vero accusantium? Commodi, neque!
+        </p>
+      </div>
+
       <div class="places-carousel ">
         <div
           id="carouselExampleCaptions"
@@ -134,6 +147,33 @@
     </section>
 
     <!-- SECTION "ABOUT US" -->
+
+    <section class="section-about-us" id="about-us">
+      <div class="row justify-content-center">
+        <h2>O NAS</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+          eligendi exercitationem architecto vero iste dicta rerum explicabo,
+          culpa ab ullam veritatis voluptatibus quis praesentium reprehenderit.
+          Suscipit nam quo eaque nesciunt. Repellat reprehenderit fugit modi!
+          Accusantium perferendis cumque magnam perspiciatis doloremque optio
+          earum asperiores delectus ducimus porro quia, neque amet. Nemo totam
+          laborum itaque rerum, laudantium quisquam voluptatibus corporis atque
+          exercitationem. Excepturi consequatur provident facere ipsa repellat
+          neque ad, temporibus ab unde tempora possimus asperiores, est
+          laboriosam architecto voluptatibus quisquam. Voluptatum quasi porro
+          natus reprehenderit minus atque nihil sunt non fuga. Architecto neque,
+          numquam repellendus consequuntur alias ducimus culpa maxime,
+          voluptatibus quas sapiente quaerat, vero asperiores. Quas labore
+          recusandae placeat quam quia itaque, commodi vero. Temporibus animi
+          aspernatur soluta officiis dicta! Et, consectetur? Excepturi velit
+          enim doloremque dolor minima, in eligendi deleniti? Enim neque
+          laboriosam ipsum eveniet eligendi obcaecati! Fugit consequuntur
+          repudiandae saepe dignissimos aperiam nobis sit ducimus quibusdam
+          eligendi officiis!
+        </p>
+      </div>
+    </section>
 
     <!-- FOOTER-->
     <footer class="footer">
