[Add] last minute offers section

--- a/index.html
+++ b/index.html
@@ -46,12 +46,69 @@
     <header>
       <nav class="row">
         <ul class="main-nav">
+          <li><a href="#last-minute-section">Oferty Last-minute</a></li>
           <li><a href="#places-section">Nasze ośrodki</a></li>
           <li><a href="#about-us">O nas</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
     </header>
+    <!-- LAST MINUTE OFFERS SECTION-->
+    <section id="last-minute-section">
+      <div class="container">
+        <h2>Oferty Last-minute</h2>
+        <div class="row justify-content-center">
+          <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/content/destinations/croatia/dubrovnik-cityscape-walls-and-coastline.jpg?$750x667$"
+                class="card-img-top"
+                alt="Croatia last minute"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Chorwacja</h5>
+                <h6>2000PLN</h6>
+                <p class="card-text">
+                  Niesamowity hotel taki i taki
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/content/destinations/croatia/dubrovnik-cityscape-walls-and-coastline.jpg?$750x667$"
+                class="card-img-top"
+                alt="Croatia last minute"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Chorwacja</h5>
+                <h6>2000PLN</h6>
+                <p class="card-text">
+                  Niesamowity hotel taki i taki
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/content/destinations/croatia/dubrovnik-cityscape-walls-and-coastline.jpg?$750x667$"
+                class="card-img-top"
+                alt="Croatia last minute"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Chorwacja</h5>
+                <h6>2000PLN</h6>
+                <p class="card-text">
+                  Niesamowity hotel taki i taki
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--
   OUR PLACES SECTION
 -->
