--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="assets/styles/variables.css" rel="stylesheet" type="text/css" />
     <link href="assets/styles/reset.css" rel="stylesheet" type="text/css" />
     <link href="assets/styles/header.css" rel="stylesheet" type="text/css" />
+    <link href="assets/styles/carousel.css" rel="stylesheet" type="text/css" />
     <link
       href="assets/styles/our-places-section.css"
       rel="stylesheet"
@@ -43,13 +44,13 @@
     <link href="assets/styles/footer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
+    <header class="navigation">
       <nav class="row">
         <ul class="main-nav">
           <li><a href="#last-minute-section">Oferty Last-minute</a></li>
           <li><a href="#places-section">Nasze ośrodki</a></li>
           <li><a href="#about-us">O nas</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
       </nav>
     </header>
@@ -61,15 +62,15 @@
           <div class="col-sm">
             <div class="card" style="width: 18rem;">
               <img
-                src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/content/destinations/croatia/dubrovnik-cityscape-walls-and-coastline.jpg?$750x667$"
+                src="https://i.content4travel.com/cms/img/u/desktop/seres/tcpweka_0.jpg"
                 class="card-img-top"
                 alt="Croatia last minute"
               />
               <div class="card-body">
-                <h5 class="card-title">Chorwacja</h5>
-                <h6>2000PLN</h6>
+                <h5 class="card-title">Egipt / Taba</h5>
+                <h6>1 799 PLN / os</h6>
                 <p class="card-text">
-                  Niesamowity hotel taki i taki
+                  Hotel El Wekala Aqua Park Resort
                 </p>
               </div>
             </div>
@@ -77,15 +78,15 @@
           <div class="col-sm">
             <div class="card" style="width: 18rem;">
               <img
-                src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/content/destinations/croatia/dubrovnik-cityscape-walls-and-coastline.jpg?$750x667$"
+                src="https://i.content4travel.com/cms/img/u/desktop/seres/rmfonat_0.jpg"
                 class="card-img-top"
                 alt="Croatia last minute"
               />
               <div class="card-body">
-                <h5 class="card-title">Chorwacja</h5>
-                <h6>2000PLN</h6>
+                <h5 class="card-title">Egipt / Marsa Alam</h5>
+                <h6>1 959 PLN / os</h6>
                 <p class="card-text">
-                  Niesamowity hotel taki i taki
+                  Hotel Onatti Beach Resort
                 </p>
               </div>
             </div>
@@ -93,15 +94,15 @@
           <div class="col-sm">
             <div class="card" style="width: 18rem;">
               <img
-                src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/content/destinations/croatia/dubrovnik-cityscape-walls-and-coastline.jpg?$750x667$"
+                src="https://i.content4travel.com/cms/img/u/desktop/seres/fncdomg_0.jpg"
                 class="card-img-top"
                 alt="Croatia last minute"
               />
               <div class="card-body">
-                <h5 class="card-title">Chorwacja</h5>
-                <h6>2000PLN</h6>
+                <h5 class="card-title">Madera</h5>
+                <h6>1 999 PLN / os</h6>
                 <p class="card-text">
-                  Niesamowity hotel taki i taki
+                  Hotel Dom Pedro Garajau Apartment & Nature
                 </p>
               </div>
             </div>
@@ -115,14 +116,10 @@
     <section id="places-section">
       <div class="row justify-content-center">
         <h2>Nasze ośrodki</h2>
+      </div>
+      <div class="row justify-content-center">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum,
-          praesentium eos. Cum illo dolore similique adipisci ipsam, provident
-          asperiores optio sunt odit voluptatum suscipit beatae! Et minima
-          doloribus tenetur? Aliquid?Magni quibusdam porro quisquam at, maiores
-          odio labore corporis eos reprehenderit molestias nobis beatae deserunt
-          consectetur! Iusto facilis odit impedit quam soluta, eius dolores
-          architecto quibusdam vero accusantium? Commodi, neque!
+          Obecnie firma oferuje wypoczynek w trzech miejscach: Egipcie, Grecji oraz Wyspach Madery.
         </p>
       </div>
 
@@ -144,39 +141,38 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="assets/img/19ab10a460f93441e0f7ba67830bf10a.jpg"
-                class="d-block w-100"
-                alt="Ośrodek 1"
+                src="assets/img/egypt.jpg"
+                class="d-block w-100 carousel-item-image"
+                alt="Egipt"
               />
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
+              <div class="carousel-caption d-none d-md-block carousel-caption-enhanced">
+                <h5>Egipt</h5>
                 <p>
-                  Nulla vitae elit libero, a pharetra augue mollis interdum.
+                  Państwo położone w północno-wschodniej Afryce z półwyspem Synaj w zachodniej Azji.
                 </p>
               </div>
             </div>
             <div class="carousel-item">
               <img
-                src="assets/img/nice-place-to-rest-2440246.jpg"
-                class="d-block w-100"
-                alt="Ośrodek 2"
+                src="assets/img/madeira.jpg"
+                class="d-block w-100 carousel-item-image"
+                alt="Madera"
               />
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="carousel-caption d-none d-md-block carousel-caption-enhanced">
+                <h5>Madera</h5>
+                <p>Portugalski archipelag położony na Oceanie Atlantyckim</p>
               </div>
             </div>
             <div class="carousel-item">
               <img
-                src="assets/img/prakruth-resort.jpg"
-                class="d-block w-100"
-                alt="Ośrodek 3"
+                src="assets/img/greece.jpg"
+                class="d-block w-100 carousel-item-image"
+                alt="Grecja"
               />
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
+              <div class="carousel-caption d-none d-md-block carousel-caption-enhanced">
+                <h5>Grecja</h5>
                 <p>
-                  Praesent commodo cursus magna, vel scelerisque nisl
-                  consectetur.
+                  Kraj położony w południowo-wschodniej części Europy, na południowym krańcu Półwyspu Bałkańskiego.
                 </p>
               </div>
             </div>
@@ -204,31 +200,47 @@
     </section>
 
     <!-- SECTION "ABOUT US" -->
-
     <section class="section-about-us" id="about-us">
       <div class="row justify-content-center">
         <h2>O NAS</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
-          eligendi exercitationem architecto vero iste dicta rerum explicabo,
-          culpa ab ullam veritatis voluptatibus quis praesentium reprehenderit.
-          Suscipit nam quo eaque nesciunt. Repellat reprehenderit fugit modi!
-          Accusantium perferendis cumque magnam perspiciatis doloremque optio
-          earum asperiores delectus ducimus porro quia, neque amet. Nemo totam
-          laborum itaque rerum, laudantium quisquam voluptatibus corporis atque
-          exercitationem. Excepturi consequatur provident facere ipsa repellat
-          neque ad, temporibus ab unde tempora possimus asperiores, est
-          laboriosam architecto voluptatibus quisquam. Voluptatum quasi porro
-          natus reprehenderit minus atque nihil sunt non fuga. Architecto neque,
-          numquam repellendus consequuntur alias ducimus culpa maxime,
-          voluptatibus quas sapiente quaerat, vero asperiores. Quas labore
-          recusandae placeat quam quia itaque, commodi vero. Temporibus animi
-          aspernatur soluta officiis dicta! Et, consectetur? Excepturi velit
-          enim doloremque dolor minima, in eligendi deleniti? Enim neque
-          laboriosam ipsum eveniet eligendi obcaecati! Fugit consequuntur
-          repudiandae saepe dignissimos aperiam nobis sit ducimus quibusdam
-          eligendi officiis!
+          Llamas in Pajamas powstała w 2018 roku i od dokładnie tego samego roku, zajmuje pozycję lidera branży turystycznej, zwłaszcza wśród studenów. Następujące sezony ugruntowały pozycję firmy na rynku, kiedy niskimi cenami i dobrym stosunkiem jakości do kosztu wycieczki zyskała uznanie środowisk uczelnianych. Konsekwentna praca młodego innowacyjnego zespołu doprowadziła do gwałtownego i nieprzemyślanego wzrostu firmy.
+          ITAKA powstała w 1989 r. i od 2009 r. zajmuje pozycję niekwestionowanego lidera branży turystycznej.
         </p>
+        <p>
+          Innowacyjne technologie wykorzystywane na codzień w biurze Llamas in Pajamas doprowadziły do prowadzenia pionierskich działań w zakresie turystyki zagranicznej wyjazdowej, autorskie programy wycieczek objazdowych obejmujących owocowe wtorki na każdym zakątku świata oraz strefy wypoczynku dla najbardziej wymagających. Dla bardziej aktywnych osób została specjalnie naszykowana oferta benefitów w postaci kart sportowych umożliwiających dowolne korzystanie z obecnych w danym miejscu ośrodków aktywnej rekreacji.
+        </p>
+        <p>
+          Strategia rozwoju to dalsze zatrudnianie studentów, gdyż każdy wspaniale wie, że skończoną ich ilością można zastąpić każdego szanującego się pracownika. Dodatkowo, kto inny jak nie ta grupa społeczna wie, jak zapewnić wartościowe wspomnienia podczas spędzanego wypoczynku.
+        </p>
+        <p>
+          Sprawdź nas!
+        </p>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="row justify-content-center">
+        <h2>Skontaktuj się z nami</h2>
+      </div>
+      <div class="row justify-content-center">
+        <form>
+          <div class="form-group">
+            <label for="email-address">Adres e-mail</label>
+            <input type="email" class="form-control" id="email-address" placeholder="jan.kowalski@przyklad.com">
+            <small class="form-text text-muted">Twój adres e-mail nie zostanie udostępniony osobom trzecim.</small>
+          </div>
+          <div class="form-group">
+            <label for="full-name">Imię i nazwisko</label>
+            <input type="email" class="form-control" id="full-name" placeholder="Jan Kowalski">
+          </div>
+          <div class="form-group">
+            <label for="email-body">Treść wiadomości</label>
+            <textarea class="form-control" id="email-body" rows="5"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Wyślij</button>
+        </form>
       </div>
     </section>
 
