--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
     <header class="navigation">
       <nav class="row">
         <ul class="main-nav">
-          <li><a href="#last-minute-section">Oferty Last-minute</a></li>
-          <li><a href="#places-section">Nasze ośrodki</a></li>
-          <li><a href="#about-us">O nas</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li><a href="index.html#last-minute-section">Oferty Last-minute</a></li>
+          <li><a href="index.html#places-section">Nasze ośrodki</a></li>
+          <li><a href="index.html#about-us">O nas</a></li>
+          <li><a href="index.html#contact">Kontakt</a></li>
+          <li><a href="terms-and-conditions.html">Regulamin serwisu</a></li>
         </ul>
       </nav>
     </header>
