--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                 class="form-control"
                 id="email-address"
                 placeholder="jan.kowalski@przyklad.com"
+                required="true"
               />
               <small class="form-text text-muted"
                 >Twój adres e-mail nie zostanie udostępniony osobom
@@ -275,10 +276,11 @@
             <div class="form-group">
               <label for="full-name">Imię i nazwisko</label>
               <input
-                type="email"
+                type="text"
                 class="form-control"
                 id="full-name"
                 placeholder="Jan Kowalski"
+                required="true"
               />
             </div>
             <div class="form-group">
@@ -287,6 +289,7 @@
                 class="form-control"
                 id="email-body"
                 rows="5"
+                required="true"
               ></textarea>
             </div>
             <button type="submit" class="btn btn-primary btn-block">
