--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
           <li><a href="#places-section">Nasze ośrodki</a></li>
           <li><a href="#about-us">O nas</a></li>
           <li><a href="#contact">Kontakt</a></li>
-          <li><a href="terms-and-conditions.html">Regulamin serwisu</a></li>
+          <li>
+            <a href="terms-and-conditions.html#table-of-content"
+              >Regulamin serwisu</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
