[Fix] format the terms of usage

--- a/index.html
+++ b/index.html
@@ -320,7 +320,11 @@
           <section class="col-md-2">
             <h6>Zasady</h6>
             <ul class="footer-terms-and-conditions">
-              <li><a href="terms-and-conditions.html">Regulamin</a></li>
+              <li>
+                <a href="terms-and-conditions.html#table-of-content"
+                  >Regulamin</a
+                >
+              </li>
             </ul>
           </section>
           <!-- SOCIAL MEDIA -->
