--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -45,21 +45,26 @@
   </head>
   <body>
     <header class="navigation">
-      <nav class="row">
-        <ul class="main-nav">
-          <li>
-            <a href="index.html#last-minute-section">Oferty Last-minute</a>
-          </li>
-          <li><a href="index.html#places-section">Nasze ośrodki</a></li>
-          <li><a href="index.html#about-us">O nas</a></li>
-          <li><a href="index.html#contact">Kontakt</a></li>
-          <li>
-            <a href="#table-of-content"
-              >Regulamin serwisu (powrót do spisu treści)</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <nav class="navbar navbar-expand-lg">
+          <a class="navbar-brand nav-brand" href="index.html">Llamas in Pajamas</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto navbar-links">
+              <li><a class="nav-link" href="index.html#last-minute-section">Oferty Last-minute</a></li>
+              <li><a class="nav-link" href="index.html#places-section">Nasze ośrodki</a></li>
+              <li><a class="nav-link" href="index.html#about-us">O nas</a></li>
+              <li><a class="nav-link" href="index.html#contact">Kontakt</a></li>
+              <li>
+                <a class="nav-link" href="terms-and-conditions.html#table-of-content"
+                  >Regulamin serwisu</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
     </header>
 
     <!-- TERMS AND CONDITIONS-->
