--- a/index.html
+++ b/index.html
@@ -45,18 +45,25 @@
   </head>
   <body>
     <header class="navigation">
-      <nav class="row">
-        <ul class="main-nav">
-          <li><a href="#last-minute-section">Oferty Last-minute</a></li>
-          <li><a href="#places-section">Nasze ośrodki</a></li>
-          <li><a href="#about-us">O nas</a></li>
-          <li><a href="#contact">Kontakt</a></li>
-          <li>
-            <a href="terms-and-conditions.html#table-of-content"
-              >Regulamin serwisu</a
-            >
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand nav-brand" href="index.html">Llamas in Pajamas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto navbar-links">
+            <li><a class="nav-link" href="#last-minute-section">Oferty Last-minute</a></li>
+            <li><a class="nav-link" href="#places-section">Nasze ośrodki</a></li>
+            <li><a class="nav-link" href="#about-us">O nas</a></li>
+            <li><a class="nav-link" href="#contact">Kontakt</a></li>
+            <li>
+              <a class="nav-link" href="terms-and-conditions.html#table-of-content"
+                >Regulamin serwisu</a
+              >
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <!-- LAST MINUTE OFFERS SECTION-->
@@ -120,14 +127,16 @@
   OUR PLACES SECTION
 -->
       <section id="places-section">
-        <div class="row justify-content-center">
-          <h2>Nasze ośrodki</h2>
-        </div>
-        <div class="row justify-content-center">
-          <p>
-            Obecnie firma oferuje wypoczynek w trzech miejscach: Egipcie, Grecji
-            oraz Wyspach Madery.
-          </p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 offset-md-3 col-sm-12">
+              <h2>Nasze ośrodki</h2>
+              <p>
+                Obecnie firma oferuje wypoczynek w trzech miejscach: Egipcie, Grecji
+                oraz Wyspach Madery.
+              </p>
+            </div>
+          </div>
         </div>
 
         <div class="places-carousel ">
@@ -222,84 +231,129 @@
 
       <!-- SECTION "ABOUT US" -->
       <section class="section-about-us" id="about-us">
-        <div class="row justify-content-center">
-          <h2>O NAS</h2>
-          <p>
-            Llamas in Pajamas powstała w 2018 roku i od dokładnie tego samego
-            roku, zajmuje pozycję lidera branży turystycznej, zwłaszcza wśród
-            studenów. Następujące sezony ugruntowały pozycję firmy na rynku,
-            kiedy niskimi cenami i dobrym stosunkiem jakości do kosztu wycieczki
-            zyskała uznanie środowisk uczelnianych. Konsekwentna praca młodego
-            innowacyjnego zespołu doprowadziła do gwałtownego i nieprzemyślanego
-            wzrostu firmy.
-          </p>
-          <p>
-            Innowacyjne technologie wykorzystywane na codzień w biurze Llamas in
-            Pajamas doprowadziły do prowadzenia pionierskich działań w zakresie
-            turystyki zagranicznej wyjazdowej, autorskie programy wycieczek
-            objazdowych obejmujących owocowe wtorki na każdym zakątku świata
-            oraz strefy wypoczynku dla najbardziej wymagających. Dla bardziej
-            aktywnych osób została specjalnie naszykowana oferta benefitów w
-            postaci kart sportowych umożliwiających dowolne korzystanie z
-            obecnych w danym miejscu ośrodków aktywnej rekreacji.
-          </p>
-          <p>
-            Strategia rozwoju to dalsze zatrudnianie studentów, gdyż każdy
-            wspaniale wie, że skończoną ich ilością można zastąpić każdego
-            szanującego się pracownika. Dodatkowo, kto inny jak nie ta grupa
-            społeczna wie, jak zapewnić wartościowe wspomnienia podczas
-            spędzanego wypoczynku.
-          </p>
-          <p>
-            Sprawdź nas!
-          </p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-10 offset-md-1 col-sm-12">
+              <h2>O NAS</h2>
+              <p>
+                Llamas in Pajamas powstała w 2018 roku i od dokładnie tego samego
+                roku, zajmuje pozycję lidera branży turystycznej, zwłaszcza wśród
+                studenów. Następujące sezony ugruntowały pozycję firmy na rynku,
+                kiedy niskimi cenami i dobrym stosunkiem jakości do kosztu wycieczki
+                zyskała uznanie środowisk uczelnianych. Konsekwentna praca młodego
+                innowacyjnego zespołu doprowadziła do gwałtownego i nieprzemyślanego
+                wzrostu firmy.
+              </p>
+              <p>
+                Innowacyjne technologie wykorzystywane na codzień w biurze Llamas in
+                Pajamas doprowadziły do prowadzenia pionierskich działań w zakresie
+                turystyki zagranicznej wyjazdowej, autorskie programy wycieczek
+                objazdowych obejmujących owocowe wtorki na każdym zakątku świata
+                oraz strefy wypoczynku dla najbardziej wymagających. Dla bardziej
+                aktywnych osób została specjalnie naszykowana oferta benefitów w
+                postaci kart sportowych umożliwiających dowolne korzystanie z
+                obecnych w danym miejscu ośrodków aktywnej rekreacji.
+              </p>
+              <p>
+                Strategia rozwoju to dalsze zatrudnianie studentów, gdyż każdy
+                wspaniale wie, że skończoną ich ilością można zastąpić każdego
+                szanującego się pracownika. Dodatkowo, kto inny jak nie ta grupa
+                społeczna wie, jak zapewnić wartościowe wspomnienia podczas
+                spędzanego wypoczynku.
+              </p>
+              <p>
+                Sprawdź nas!
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
       <!-- CONTACT -->
       <section id="contact">
-        <div class="row justify-content-center">
-          <h2>Skontaktuj się z nami</h2>
-        </div>
-        <div class="row justify-content-center">
-          <form>
-            <div class="form-group">
-              <label for="email-address">Adres e-mail</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email-address"
-                placeholder="jan.kowalski@przyklad.com"
-                required="true"
-              />
-              <small class="form-text text-muted"
-                >Twój adres e-mail nie zostanie udostępniony osobom
-                trzecim.</small
-              >
-            </div>
-            <div class="form-group">
-              <label for="full-name">Imię i nazwisko</label>
-              <input
-                type="text"
-                class="form-control"
-                id="full-name"
-                placeholder="Jan Kowalski"
-                required="true"
-              />
-            </div>
-            <div class="form-group">
-              <label for="email-body">Treść wiadomości</label>
-              <textarea
-                class="form-control"
-                id="email-body"
-                rows="5"
-                required="true"
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">
-              Wyślij
-            </button>
-          </form>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 offset-md-3 col-sm-12">
+              <h2>Skontaktuj się z nami</h2>
+              <form class="mb-5">
+                <div class="form-group">
+                  <label for="email-address">Adres e-mail</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email-address"
+                    placeholder="jan.kowalski@przyklad.com"
+                    required="true"
+                  />
+                  <small class="form-text text-muted"
+                    >Twój adres e-mail nie zostanie udostępniony osobom
+                    trzecim.</small
+                  >
+                </div>
+                <div class="form-group">
+                  <label for="full-name">Imię i nazwisko</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="full-name"
+                    placeholder="Jan Kowalski"
+                    required="true"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email-body">Treść wiadomości</label>
+                  <textarea
+                    class="form-control"
+                    id="email-body"
+                    rows="5"
+                    required="true"
+                  ></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">
+                  Wyślij
+                </button>
+              </form>
+              <div class="row">
+                  <div class="col-md-6">
+                    Llamas in Pajamas sp. z o.o.
+                  </div>
+                  <div class="col-md-6">
+                    ul. Takaataka 6 91-012 Takieatakie, Polska
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    Nr kontaktowy
+                  </div>
+                  <div class="col-md-6">
+                    +48 400 500 600
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    NIP
+                  </div>
+                  <div class="col-md-6">
+                    PL 244 21 85 254
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                      KRS
+                  </div>
+                  <div class="col-md-6">
+                    1235 49 09 07
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                      REGON
+                  </div>
+                  <div class="col-md-6">
+                    101 728 987
+                  </div>
+                </div>
+          </div>
         </div>
       </section>
     </div>
@@ -309,7 +363,7 @@
       <div class="container">
         <div class="row">
           <!-- COMPANY -->
-          <section class="col-md-2">
+          <section class="col-md-2 col-sm-12">
             <h6>Firma</h6>
             <ul class="footer-company-info">
               <li><a href="#about-us">O nas</a></li>
@@ -317,7 +371,7 @@
             </ul>
           </section>
           <!-- TERMS & CONDITIONS-->
-          <section class="col-md-2">
+          <section class="col-md-2 col-sm-12">
             <h6>Zasady</h6>
             <ul class="footer-terms-and-conditions">
               <li>
@@ -328,7 +382,7 @@
             </ul>
           </section>
           <!-- SOCIAL MEDIA -->
-          <section class="col-md-6">
+          <section class="col-md-6 col-sm-12">
             <h6>Dołącz do nas</h6>
             <span class="footer-social-media-icon">
               <i class="fab fa-facebook-square"></i>
@@ -344,9 +398,7 @@
         <div class="row">
           <!-- COPYRIGHT -->
           <section class="col-md-12">
-            <small class="footer-copyright"
-              >Copyright &copy; Llamas in Pajamas</small
-            >
+            <small class="footer-copyright">Copyright &copy; Llamas in Pajamas</small>
           </section>
         </div>
       </div>
