[Add] Padding to the top of chosen sections

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
     <!-- LAST MINUTE OFFERS SECTION-->
     <div class="page-content">
-      <section id="last-minute-section">
+      <section id="last-minute-section" class="part">
         <div class="container">
           <h2>Oferty Last-minute</h2>
           <div class="row justify-content-center">
@@ -126,7 +126,7 @@
       <!--
   OUR PLACES SECTION
 -->
-      <section id="places-section">
+      <section id="places-section" class="part">
         <div class="container">
           <div class="row">
             <div class="col-md-6 offset-md-3 col-sm-12">
@@ -230,7 +230,7 @@
       </section>
 
       <!-- SECTION "ABOUT US" -->
-      <section class="section-about-us" id="about-us">
+      <section class="section-about-us part" id="about-us">
         <div class="container">
           <div class="row">
             <div class="col-md-10 offset-md-1 col-sm-12">
@@ -270,7 +270,7 @@
       </section>
 
       <!-- CONTACT -->
-      <section id="contact">
+      <section id="contact" class="part">
         <div class="container">
           <div class="row">
             <div class="col-md-6 offset-md-3 col-sm-12">
