--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
   </head>
   <body>
     <header class="navigation">
-      <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand nav-brand" href="index.html">Llamas in Pajamas</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto navbar-links">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <a class="navbar-brand nav-brand" href="index.html">Llamas in Pajamas</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto navbar-links">
             <li><a class="nav-link" href="#last-minute-section">Oferty Last-minute</a></li>
             <li><a class="nav-link" href="#places-section">Nasze ośrodki</a></li>
             <li><a class="nav-link" href="#about-us">O nas</a></li>
@@ -63,8 +62,8 @@
               >
             </li>
           </ul>
-        </div>
-      </nav>
+  </div>
+</nav>
     </header>
     <!-- LAST MINUTE OFFERS SECTION-->
     <div class="page-content">
@@ -419,5 +418,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./scripts/smooth.js"></script>
+    <script src="./scripts/collapse.js"></script>
   </body>
 </html>
