--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -44,34 +44,53 @@
     <link href="assets/styles/footer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header class="navigation">
-      <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand nav-brand" href="index.html">Llamas in Pajamas</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto navbar-links">
-              <li><a class="nav-link" href="index.html#last-minute-section">Oferty Last-minute</a></li>
-              <li><a class="nav-link" href="index.html#places-section">Nasze ośrodki</a></li>
-              <li><a class="nav-link" href="index.html#about-us">O nas</a></li>
-              <li><a class="nav-link" href="index.html#contact">Kontakt</a></li>
-              <li>
-                <a class="nav-link" href="terms-and-conditions.html#table-of-content"
-                  >Regulamin serwisu</a
-                >
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <header class="navigation">      
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand nav-brand" href="index.html"
+          >Llamas in Pajamas</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto navbar-links">
+            <li>
+              <a class="nav-link" href="index.html#last-minute-section"
+                >Oferty Last-minute</a
+              >
+            </li>
+            <li>
+              <a class="nav-link" href="index.html#places-section"
+                >Nasze ośrodki</a
+              >
+            </li>
+            <li><a class="nav-link" href="index.html#about-us">O nas</a></li>
+            <li><a class="nav-link" href="index.html#contact">Kontakt</a></li>
+            <li>
+              <a
+                class="nav-link"
+                href="terms-and-conditions.html#table-of-content"
+                >Regulamin serwisu</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <!-- TERMS AND CONDITIONS-->
     <div class="container">
       <section>
         <div id="table-of-content">
-          <h3 style="">Spis treści:</h3>
+          <h3 class="part">Spis treści:</h3>
           <ol>
             <li><a href="#general-agreements">1. POSTANOWIENIA OGÓLNE</a></li>
             <li>
@@ -118,7 +137,7 @@
 
         <ol>
           <li id="general-agreements">
-            <h3>1. POSTANOWIENIA OGÓLNE</h3>
+            <h3 class="part" />1. POSTANOWIENIA OGÓLNE</h3>
             <p>
               Regulamin określa zasady korzystania z serwisu
               www.lammasinpajamastravel.pl. Administratorem serwisu
@@ -148,7 +167,7 @@
             </p>
           </li>
           <li id="copyright-law">
-            <h3>2. PRAWA AUTORSKIE I ZASTRZEŻENIA PRAWNE</h3>
+            <h3 class="part" />2. PRAWA AUTORSKIE I ZASTRZEŻENIA PRAWNE</h3>
             <p>
               Serwis www.lammasinpajamastravel.pl jest własnością
               Administratora, ma on prawo dokonywania w nim zmian, dodawania,
@@ -211,7 +230,7 @@
             </p>
           </li>
           <li id="definitions">
-            <h3>3. POJĘCIA STOSOWANE W REGULAMINIE</h3>
+            <h3 class="part" />3. POJĘCIA STOSOWANE W REGULAMINIE</h3>
             <p>
               Administrator/Biuro Podróży – podmiot wskazany w § I. pkt 2
               Regulaminu. Hasło – unikalny ciąg znaków ustalony przez
@@ -258,7 +277,7 @@
             </p>
           </li>
           <li id="terms">
-            <h3>
+            <h3 class="part" />
               4. PRZEDMIOT I WARUNKI ŚWIADCZONYCH USŁUG
             </h3>
             <p>
@@ -275,7 +294,7 @@
             </p>
           </li>
           <li id="electronic-services">
-            <h3>5. INFORMACJE O USŁUGACH ŚWIADCZONYCH DROGĄ ELEKTRONICZNĄ</h3>
+            <h3 class="part" />5. INFORMACJE O USŁUGACH ŚWIADCZONYCH DROGĄ ELEKTRONICZNĄ</h3>
             <p>
               Administrator zapewnia funkcjonowanie systemu informatycznego,
               którym się posługuje w sposób taki, aby każdy Użytkownik mógł
@@ -311,7 +330,7 @@
             </p>
           </li>
           <li id="customer-action">
-            <h3>
+            <h3 class="part" />
               6. ZAWARCIE UMOWY, DOKONANIE REZERWACJI I REALIZACJA UMOWY
             </h3>
             <p>
@@ -340,7 +359,7 @@
             </p>
           </li>
           <li id="agreement-cancel">
-            <h3>
+            <h3 class="part" />
               7. ODSTĄPIENIE OD UMOWY
             </h3>
             <p>
@@ -349,7 +368,7 @@
             </p>
           </li>
           <li id="complaint">
-            <h3>
+            <h3 class="part" />
               8. REKLAMACJE
             </h3>
             <p>
@@ -358,7 +377,7 @@
             </p>
           </li>
           <li id="payments">
-            <h3>9. PŁATNOŚCI</h3>
+            <h3 class="part" />9. PŁATNOŚCI</h3>
             <p>
               Płatności w serwisie www.lammasinpajamastravel.pl obsługiwane są
               przez Przelewy24, które dostarczają największą w Polsce ilość
@@ -375,7 +394,7 @@
             </p>
           </li>
           <li id="safety">
-            <h3>
+            <h3 class="part" />
               10. BEZPIECZEŃSTWO
             </h3>
             <p>
@@ -389,7 +408,7 @@
             </p>
           </li>
           <li id="privacy">
-            <h3>
+            <h3 class="part" />
               11. POLITYKA PRYWATNOŚCI
             </h3>
             <p>
@@ -423,7 +442,7 @@
             </p>
           </li>
           <li id="mass-tourism">
-            <h3>
+            <h3 class="part" />
               12. ZAWARCIE UMOWY O UDZIAŁ W IMPREZIE TURYSTYCZNEJ
             </h3>
             <p>
@@ -525,7 +544,7 @@
             </p>
           </li>
           <li id="customer-area">
-            <h3>13. STREFA KLIENTA</h3>
+            <h3 class="part" />13. STREFA KLIENTA</h3>
             <p>
               Administrator przetwarza dane osobowe w następujących celach:
               Zawarcia umowy o świadczenie usług drogą elektroniczną (zgodnie z
@@ -599,7 +618,7 @@
             </p>
           </li>
           <li id="offer-form">
-            <h3>14. FORMULARZ OFERTOWY</h3>
+            <h3 class="part" />14. FORMULARZ OFERTOWY</h3>
             <p>
               Administrator przetwarza dane osobowe w celu: Realizacji
               zapytania, tj. przedstawienia oferty na udział w imprezie
@@ -667,7 +686,7 @@
             </p>
           </li>
           <li id="contact-form">
-            <h3>15. FORMULARZ KONTAKTOWY</h3>
+            <h3 class="part" />15. FORMULARZ KONTAKTOWY</h3>
             <p>
               Administrator przetwarza dane osobowe w celu: Udzielenia
               odpowiedzi na pytania zadawane za pośrednictwem formularza
@@ -736,7 +755,7 @@
             </p>
           </li>
           <li id="newsletter">
-            <h3>16. NEWSLETTER</h3>
+            <h3 class="part" />16. NEWSLETTER</h3>
             <p>
               Administrator przetwarza dane osobowe w celu: Przekazywania osobom
               zainteresowanym ofertą Administratora informacji marketingowych za
@@ -798,7 +817,7 @@
             </p>
           </li>
           <li id="blog">
-            <h3>17. BLOG</h3>
+            <h3 class="part" />17. BLOG</h3>
             <p>
               Administrator przetwarza dane osobowe w celu umożliwienia
               użytkownikowi rejestracji oraz wymiany informacji, w tym dodawania
@@ -845,7 +864,7 @@
             </p>
           </li>
           <li id="social-media">
-            <h3>18. MEDIA SPOŁECZNOŚCIOWE</h3>
+            <h3 class="part" />18. MEDIA SPOŁECZNOŚCIOWE</h3>
             <p>
               Administrator przetwarza dane osobowe użytkowników odwiedzających
               profile Administratora prowadzone w mediach społecznościowych (np.
@@ -860,7 +879,7 @@
           </li>
 
           <li id="final">
-            <h3>19. POSTANOWIENIA KOŃCOWE</h3>
+            <h3 class="part" />19. POSTANOWIENIA KOŃCOWE</h3>
             <p>
               Administrator zabezpiecza przetwarzane przez siebie dane osobowe
               zgodnie z powszechnie obowiązującymi przepisami, dotyczącymi
@@ -878,7 +897,7 @@
             </p>
           </li>
           <li id="cookies">
-            <h3>20. POLITYKA COOKIES</h3>
+            <h3 class="part" />20. POLITYKA COOKIES</h3>
             <p>
               Administrator gromadzi informacje pozyskiwane automatycznie – logi
               systemów (tzw. rejestry zdarzeń), zawierające w szczególności
