[Add] information about accepting rules

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                 <button type="submit" class="btn btn-primary btn-block">
                   Wyślij
                 </button>
+                <span>Klikając przycisk wyślij akceptujesz <a href="terms-and-conditions.html#table-of-content">Regulamin serwisu</a></span>              
               </form>
               <div class="row">
                   <div class="col-md-6">
